tdf#130986 Chart OOXML export: fix number format of custom label

Export correct sourceLinked attribute in c:dLbls/c:dLbl/c:numFmt, as
in c:dLbls/c:numFmt.

Change-Id: I0e52720b3cb2c99550a779763f01ba12f762050d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89638
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89947
Tested-by: Jenkins